force-app/main/default/objects/RV_StackWeights__c/RV_StackWeights__c.object-meta.xml
<CustomObject>
    <label>RV StackWeights</label>
    <nameField>
        <label>RV StackWeights</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV StackWeights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>