force-app/main/default/objects/RV_StackWeights__c/fields/InDia__c.field-meta.xml
<CustomField>
    <fullName>InDia__c</fullName>
    <label>InDia</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>