force-app/main/default/objects/RV_StackWeights__c/fields/OutDia__c.field-meta.xml
<CustomField>
    <fullName>OutDia__c</fullName>
    <label>OutDia</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>