force-app/main/default/objects/RV_StackWeights__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Weight__c</columns>
    <columns>ModulePN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Weight__c</field>
        <operation>equals</operation>
        <value>20.41</value>
    </filters>
    <label>All</label>
</ListView>